--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,25 @@
-<meta name="fc:frame" content="vNext" />
-<meta name="og:title" content="Crypto Snakes" />
-<meta name="og:description" content="Play Snakes & Ladders on Farcaster" />
-<meta name="og:image" content="https://newstgl29sep-1.vercel.app/splash.png" />
-<meta name="fc:frame:image" content="https://newstgl29sep-1.vercel.app/splash.png" />
-<meta name="fc:frame:button:1" content="🎲 Roll Dice" />
-<meta name="fc:frame:post_url" content="https://newstgl29sep-1.vercel.app/api/frame" />
-<meta name="fc:frame:button:2" content="🏆 Leaderboard" />
-<meta name="fc:frame:post_url:2" content="https://newstgl29sep-1.vercel.app/api/leaderboard" />
-<meta name="fc:frame:button:3" content="🌐 Play Full Game" />
-<meta name="fc:frame:button:3:action" content="link" />
-<meta name="fc:frame:button:3:target" content="https://newstgl29sep-1.vercel.app/game" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Crypto Snakes Frame</title>
+
+  <!-- Farcaster Frame Meta -->
+  <meta name="fc:frame" content="vNext" />
+  <meta name="og:title" content="Crypto Snakes" />
+  <meta name="og:description" content="Play Snakes & Ladders on Farcaster" />
+  <meta name="og:image" content="https://newstgl29sep-1.vercel.app/splash.png" />
+
+  <meta name="fc:frame:image" content="https://newstgl29sep-1.vercel.app/splash.png" />
+  <meta name="fc:frame:button:1" content="🎲 Roll Dice" />
+  <meta name="fc:frame:post_url" content="https://newstgl29sep-1.vercel.app/api/frame" />
+  <meta name="fc:frame:button:2" content="🏆 Leaderboard" />
+  <meta name="fc:frame:post_url:2" content="https://newstgl29sep-1.vercel.app/api/leaderboard" />
+  <meta name="fc:frame:button:3" content="🌐 Play Full Game" />
+  <meta name="fc:frame:button:3:action" content="link" />
+  <meta name="fc:frame:button:3:target" content="https://newstgl29sep-1.vercel.app/game" />
+</head>
+<body>
+  <p>If you see this in browser: <a href="/game">Open Full Game</a></p>
+</body>
+</html>
